--- a/templates/layout/base.html.jinja
+++ b/templates/layout/base.html.jinja
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Home Page</title>
+    <title>
+        {% block title %}
+
+        {% endblock title %}
+    </title>
 
     <style>
         body {
@@ -20,17 +24,17 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">FourMed</a>
+        <a class="navbar-brand" href="{{ url_for('home_page') }}">FourMed</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('home_page') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Market</a>
+                    <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -44,6 +48,9 @@
         </div>
     </nav>
 
+    {% block content %}
+
+    {% endblock content %}
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
