--- a/templates/market.html.jinja
+++ b/templates/market.html.jinja
@@ -12,6 +12,7 @@ Market Page
             <th scope="col">Name</th>
             <th scope="col">Barcode</th>
             <th scope="col">Price</th>
+            <th scope="col">Description</th>
             <th scope="col">Options</th>
         </tr>
     </thead>
@@ -22,6 +23,7 @@ Market Page
             <td>{{ item.name }}</td>
             <td>{{ item.barcode }}</td>
             <td>{{ item.price }}$</td>
+            <td>{{ item.description }}</td>
             <td>
                 <button class="btn btn-outline btn-info">More Info</button>
                 <button class="btn btn-outline btn-success">Purchase</button>
