--- a/flaskr/templates/layout/base.html.jinja
+++ b/flaskr/templates/layout/base.html.jinja
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('users_page') }}">Users</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
