Added a form validation
Added custom validation to check existing username and email in registration

Added wtform validation to the form input

Added a flash messages to give a user a feedback during registration

--- a/flaskr/templates/register.html.jinja
+++ b/flaskr/templates/register.html.jinja
@@ -9,6 +9,7 @@ Register Page
 <body>
     <div class="container">
         <form method="POST" class="form-register">
+            {{ form.hidden_tag() }}
             <br>
             {{ form.username.label() }}
             {{ form.username(class="form-control") }}
