--- a/flaskr/templates/layout/base.html.jinja
+++ b/flaskr/templates/layout/base.html.jinja
@@ -51,6 +51,20 @@
             </ul>
         </div>
     </nav>
+    <div class="text-center">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }}">
+            {{ message }}
+            <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div> {% endfor %}
+        {% endif %}
+        {%endwith%}
+    </div>
+
 
     {% block content %}
 
