--- a/flaskr/templates/market.html.jinja
+++ b/flaskr/templates/market.html.jinja
@@ -5,7 +5,7 @@ Market Page
 {% endblock title %}
 
 {% block content %}
-<div class="row" style="margin-top:20px; margin-left:20px">
+<div class="row" style="margin: 20px 20px 0 20px">
     <div class="col-8">
         <h2>Available items on the Market</h2>
         <p>Click on one of the items to start buying</p>
@@ -45,6 +45,27 @@ Market Page
         <h2>Owned Items</h2>
         <p>Click on sell item to put an item back on the Market</p>
         <br>
+        <div class="row">
+            {% for owned_item in owned_items %}
+            {% include 'layout/owned_items_modals.html.jinja' %}
+            <div class="col-md-6">
+                <div style="margin-bottom: 5px" class="card text-center bg-dark">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ owned_item.name }}</h5>
+                        <button type="button" class="btn btn-outline-danger" style="margin-bottom: 5px"
+                            data-toggle="modal" data-target="#Modal-SellingConfirm-{{ owned_item.id }}">
+                            Sell this Item
+                        </button>
+                        <p class="card-text">
+                            <strong>
+                                This item costs {{ owned_item.price }}$
+                            </strong>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
 </div>
 {% endblock content %}
