Add component lazy loading

--- a/frontend/styles/pages/market/cart/CartPage.scss
+++ b/frontend/styles/pages/market/cart/CartPage.scss
@@ -1,6 +1,8 @@
 @use "../../../components/market/cart/ProductList.scss";
 @use "../../../components/market/cart/OrderSummary.scss";
 @use "../../../components/market/cart/CustomerTrustSection.scss";
+@use "../../../components/market/product/QuantitySelector.scss";
+@use "../../../components/market/product/ProductCard.scss";
 @use "../../../main.scss";
 
 .cart-page {
