--- a/frontend/styles/components/market/product/ProductList.scss
+++ b/frontend/styles/components/market/product/ProductList.scss
@@ -1,5 +1,5 @@
 .product-list-container {
-    border-radius: $border-radius;
+    border-radius: 8px;
     margin-top: 1.5rem;
     padding: 2.5rem;
     margin-inline: auto;
