--- a/frontend/styles/pages/market/items/ProductPage.scss
+++ b/frontend/styles/pages/market/items/ProductPage.scss
@@ -42,7 +42,7 @@
             }
             .discount-price {
                 font-weight: bold;
-                font-size: larger;
+                font-size: x-large;
             }
             .normal-price {
                 color: #333;
