--- a/frontend/styles/components/market/cart/ProductList.scss
+++ b/frontend/styles/components/market/cart/ProductList.scss
@@ -46,6 +46,7 @@
                 }
                 .discount-price {
                     font-weight: bold;
+                    font-size: x-large;
                 }
                 .normal-price {
                     color: #333;
