--- a/frontend/styles/components/market/product/ProductCard.scss
+++ b/frontend/styles/components/market/product/ProductCard.scss
@@ -2,11 +2,11 @@
     max-width: 345px;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: none;
+    box-shadow: none !important;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     &:hover {
         transform: scale(1.02);
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15) !important;
     }
     .card-media-box {
         position: relative;
@@ -57,7 +57,7 @@
                 }
                 .discount-price {
                     font-weight: bold;
-                    font-size: large;
+                    font-size: x-large;
                 }
                 .normal-price {
                     color: #333;
